fix order bugs
