# docs/swagger.yaml
@@ -57,14 +57,8 @@ definitions:
     type: object
   requestmodel.Cart:
     properties:
-      cartid userid:
-        type: string
       inventoryid:
         type: string
-      price:
-        type: integer
-      quantity:
-        type: integer
     required:
     - inventoryid
     type: object
@@ -229,8 +223,6 @@ definitions:
         type: string
       payment:
         type: string
-      userid:
-        type: string
     required:
     - address
     - payment
@@ -245,10 +237,9 @@ definitions:
       confirmpassword:
         type: string
       description:
+        description: GST_NO          string `json:"gstno,omitempty"           validate:"required,len=15"`
         type: string
       email:
-        type: string
-      gstno:
         type: string
       name:
         type: string
@@ -259,7 +250,6 @@ definitions:
     - confirmpassword
     - description
     - email
-    - gstno
     - name
     - password
     type: object
@@ -1548,7 +1538,7 @@ paths:
       tags:
       - UserOrders
   /order/return:
-    get:
+    patch:
       consumes:
       - application/json
       description: Initiate a return request for a specific order.
@@ -2186,10 +2176,6 @@ paths:
         name: screensize
         required: true
         type: number
-      - in: formData
-        name: sellerID
-        required: true
-        type: integer
       - in: formData
         minimum: 0
         name: units
