# pkg/models/requestModel/cart.go
@@ -1,8 +1,8 @@
 package requestmodel
 
 type Cart struct {
-	UserID      string `json:"cartid userid" validate:""`
+	UserID      string `json:"cartid userid" swaggerignore:"true"`
 	InventoryID string `json:"inventoryid" validate:"required,number"`
-	Quantity    uint   `json:"quantity"`
-	Price       uint   `json:"price,omitempty"`
+	Quantity    uint   `json:"quantity" swaggerignore:"true"`
+	Price       uint   `json:"price,omitempty" swaggerignore:"true"`
 }
